# chatgpt2api

./: .gitignore  README.md  config.json.example  passenger_wsgi.py  pyproject.toml  requirements-freebsd.txt  requirements-serv00.txt  wsgi.py
.github/workflows/: build-freebsd.yml  sync-upstream.yml
api/: app.py  support.py
docs/: 2026-04-23-worklog.md  2026-04-24-worklog.md  deployment-fhwbvv-chat2api.md  freebsd.md  serv00.md
scripts/: deploy-serv00.sh  package-freebsd.sh  start-freebsd.sh
services/: account_service.py  api.py  backup_service.py  chatgpt_service.py  config.py  content_filter.py  cpa_service.py  generated_image_store.py  http_session.py  image_service.py  openai_backend_api.py  paths.py  proof_of_work.py  proxy_service.py  sub2api_service.py  version.py
services/compat/: __init__.py  http.py
services/protocol/: conversation.py
services/register/: mail_provider.py  openai_register.py
test/: test_completions.py  test_generations.py  test_image.py  utils.py
utils/: helper.py  pow.py
web/: next.config.ts  package.json  user_images.html
web_dist/: __next.__PAGE__.txt  __next._tree.txt  index.html  index.txt
web_dist/_not-found/: __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
web_dist/accounts/: __next._index.txt  __next._tree.txt  index.html  index.txt
web_dist/image/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.image.txt  index.html
web_dist/image-manager/: __next._tree.txt  index.html  index.txt
web_dist/login/: __next._full.txt  __next._tree.txt  index.html
(+51 files in other folders)
