[project]
name = "chatgpt2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2wsgi>=1.10.8",
    "fastapi>=0.136.0",
    "pybase64>=1.4.3",
    "python-multipart>=0.0.26",
    "requests>=2.32.0",
    "uvicorn>=0.44.0",
]
